# Authentication-System

./: .env  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
api/core/base/: services.py
api/utils/: dates.py  encrypters.py  encrypters_and_decrypters.py  json_response.py  responses.py  schedulers.py  settings.py  twilo_sms.py  user_device_agent.py  user_phonenumber.py  validators.py
api/v1/models/: __init__.py  (+14 more)
db/: database.py
former-migration/: 31d01c97580a_device_and_user_schemas_and_relationship.py  775d494cf03c_mmdb_tracker.py  8fdba9de3301_autogenerate.py  9ff302c8e093_initial_migration.py  c64651f96f13_user_devices_schema.py  ccb22fa34d8d_enum.py  cf2be8cec6a9_delete_orphan_refresh_tokens.py
migrations/: env.py
migrations/versions/: 9ff302c8e093_initial_migration.py
mjml_mail_templates/: magic_link_template.mjml  password_changed_template.mjml  password_reset_template.mjml  two_factor_auth_disabled_template.mjml  welcome_template.mjml
smtp/: decorators.py  mailing.py
templates/html_mail_templates/: TOTP_code_template.html  magic_link_template.html  new_device_login_template.html  two_factor_auth_disabled_template.html  welcome_template.html
templates/mjml_mail_templates/: TOTP_code_template.mjml  magic_link_template.mjml  new_device_login_template.mjml  two_factor_auth_disabled_template.mjml  two_factor_auth_enabled_template.mjml  verify_email_template.mjml
(+70 files in other folders)
